Revert "fix(header): show journal name in reduced header on mobile"
This reverts commit e93b5437bc7d773f1381adc8d8e28a86903915ad.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -79,8 +79,7 @@
       }
 
       @media (max-width: breakpoints.$xsm) {
-        font-size: clamp(10px, 3vw, 14px);
-        padding-right: 15px;
+        display: none;
       }
     }
 
